test/driver/no_source.dmz
// RUN: (dmz || true) 2>&1 | filecheck %s
// CHECK: error: no source file specified
